PySCF 1.5 alpha (2018-03-??)
----------------------------
* Added
  - ddCOSMO solvent model
  - VV10 NLC functional for RKS and UKS
  - range-separated hybrid features for RKS and UKS, including
    > Analytical nuclear gradients
    > Second order SCF
    > Hessian and frequency
  - IBO for molecular and PBC systems
  - UHF analytical nuclear Hessian
  - UKS analytical nuclear Hessian
  - FFT for low-dimension (2D) PBC systems
* Improved
  - Support of setting omp threads in FCI solver
  - Supported even number of grids in pbc calculations


PySCF 1.4.2 (201?-?-?)
----------------------
* Bugfix
  - pyberny interface
  - PBC GDF initialization for hybrid functional
  - guess of wfn symmetry for given fci wfn


PySCF 1.4.1 (2017-11-12)
----------------------
* Bugfix
  - meta-GGA functional detection code in XC parser
  - Orbital symmetry label in mcscf initial guess projection
  - Eigenvalue ordering for Davidson eigen solver
  - Madelung constant of non-orthogonal lattice
  - Convergence of Madelung constant for huge number of k-points samples
  - basis parser for pople-type basis
  - RCCSD when running large number of virtual orbitals on small memory machine

PySCF 1.4 (2017-10-05)
----------------------
* Improved
  - Kinetic energy cutoff estimation
  - Density fitting default auxiliary basis
  - Memory usage for FFTDF module
  - libxc interface
* Bugfix
  - KUHF dimension error in smearing function
  - SCF results inconsistency in chkfile and SOSCF solver
  - OMP stack overflow in GTO basis evaluator
  - Default grids in DFT gen_grid function for system with ECP/PP
  - mol.intor function to generate STG and YP integrals in 8-fold symmetry
  - TDDFT analytical gradients
  - DMRG-CI runtime scratch path
  - PBC GDF integrals for auxiliary basis with g functions
  - post-HF initialization function when mean-field object is DF-SOSCF method
  - Single orbital localization
  - Race condition in MP2 IO


PySCF 1.4 beta (2017-08-22)
---------------------------