@@ -24,7 +24,9 @@ from pyscf.prop.gtensor.uks import get_vxc_soc
 def make_h1_soc2e(hfcobj, dm0):
     mf = hfcobj._scf
     ni = mf._numint
-    hyb = ni.hybrid_coeff(mf.xc, spin=mol.spin)
+    omega, alpha, hyb = ni.rsh_and_hybrid_coeff(mf.xc, spin=mol.spin)
+    if abs(omega) > 1e-10:
+        raise NotImplementedError
     mem_now = lib.current_memory()[0]
     max_memory = max(2000, mf.max_memory*.9-mem_now)
     v1 = get_vxc_soc(ni, mol, mf.grids, mf.xc, dm0,
